Sube nivel usando Deque en lugar de bitset y list